# avarice.rs

./: Cargo.toml  README.md
avarice-derive/: Cargo.toml
avarice-derive/src/: lib.rs
src/: errors.rs  greedy.rs  lib.rs  macros.rs  objective.rs  ratio.rs
tests/: derive.rs
