[package]
authors = ["J David Smith <emallson@atlanis.net>"]
name = "avarice"
version = "0.3.0"

[dependencies]
error-chain = "0.10.0"
fnv = "1.0.5"
rand = "0.3.15"
rayon = "0.8.2"
slog = "~2.0"
slog-stdlog = "~2.0.0-0.2"

[dependencies.avarice-derive]
path = "avarice-derive"

[dev-dependencies]

[dev-dependencies.quickcheck]
git = "https://github.com/emallson/quickcheck.git"
version = "0.4.1"
