[package]
authors = ["J David Smith <emallson@atlanis.net>"]
name = "avarice"
version = "0.3.0"

[dependencies]
error-chain = "0.10.0"
fnv = "1.0.5"
rand = "0.3.15"
rayon = "0.8.2"
slog = "^2"
slog-stdlog = "^3.0"
setlike = { version = "0.1", git = "https://github.com/emallson/setlike.git" }

[dependencies.avarice-derive]
path = "avarice-derive"

[dev-dependencies]
quickcheck = {version = "0.4.1", git="https://github.com/emallson/quickcheck.git"}
